...
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
            <Button
                android:id="@+id/adminLogoutBtn"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentLeft="true"
                android:text="Log Out" />

            <Button
                android:id="@+id/createUserBtn"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentRight="true"
                android:text="Create" />
        </RelativeLayout>

        </LinearLayout>
        <TextView
            android:text="USERS:"
            android:textAlignment="center"
...
            android:text="You do not have any Users"
            android:textAlignment="center"
            android:textSize="25dp"
            android:visibility="gone" />

        <!--<ListView-->
            <!--android:id="@+id/userList"-->
            <!--android:layout_width="match_parent"-->
            <!--android:layout_height="wrap_content"-->
            <!--tools:layout_editor_absoluteX="8dp"-->
            <!--tools:layout_editor_absoluteY="8dp" />-->
        <androidx.recyclerview.widget.RecyclerView
            android:layout_width="match_parent"
...
