...
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:id="@+id/createUserLayout"
    tools:context=".activities.CreateUserActivity">

    <TextView
        android:text="First Name"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />
...
        <Button
            android:text="Cancel"
            android:id="@+id/cancelCreateUserBtn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />
        <Button
            android:text="OK"
            android:id="@+id/createUserOkBtn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />
    </LinearLayout>

</LinearLayout>
